--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <script>
-
-    alert ("Hello World");
-  </script>
+  <script src="test.js"> </script>
 
 </body>
 </html>
