--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="test.js"> </script>
 
+
+
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+    <a href="#">Link 4</a>
+    <a href="#">Link 5</a>
+    <a href="#">Link 6</a>
+      <script src="test.js"> </script>
 </body>
 </html>
