--- a/index.html
+++ b/index.html
@@ -7,16 +7,8 @@
   <title>Document</title>
 </head>
 <body>
+<div id="myChatter"></div>
 
-
-
-    <a href="#">Link 0</a>
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-    <a href="#">Link 4</a>
-    <a href="#">Link 5</a>
-
-      <script src="test.js"> </script>
+      <script src="drink.js"> </script>
 </body>
 </html>
